Fix bug of injecting loaded class.